<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/calc_keyboard_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UsingOnClickInXml"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left_guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center_guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right_guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_central_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_center_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8" />


    <!--  Bottom Button row  -->
    <Button
        style="@style/style_calc_button"
        android:onClick="onDigitSignClicked"
        android:text="@string/calc_digit_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_bottom_guideline"
         />

    <Button
        style="@style/style_calc_button"
        android:onClick="onDigitSignClicked"
        android:text="@string/calc_dote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_bottom_guideline" />

    <Button
        android:onClick="onCalculateClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_operation_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_bottom_guideline" />
    <!--    -->
    <!--    -->



    <!--  Bottom second row  -->
    <Button
        style="@style/style_calc_button"
        android:onClick="onPlusClicked"
        android:text="@string/calc_operation_sum"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_center_bottom_guideline" />

    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_3"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_center_bottom_guideline" />

    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_2"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_center_bottom_guideline" />
    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_1"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_left_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_center_bottom_guideline" />
    <!--    -->
    <!--    -->


    <!--  Bottom third row  -->
    <Button
        style="@style/style_calc_button"
        android:text="@string/calc_operation_minus"
        android:onClick="onMinusClicked"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_center_bottom_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_central_top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_right_guideline"
         />

    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_6"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_center_bottom_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_central_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
         />

    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_5"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_center_bottom_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_central_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_guideline"
         />
    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_4"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_center_bottom_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_central_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_left_guideline"
        app:layout_constraintStart_toStartOf="parent"
         />
    <!--    -->
    <!--    -->

    <!--  Bottom fourth row  -->
    <Button
        style="@style/style_calc_button"
        android:onClick="onMultiplyClicked"
        android:text="@string/calc_operation_multiplication"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_central_top_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_right_guideline"
         />

    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_9"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_central_top_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
        />

    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_8"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_central_top_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_guideline"
        />
    <Button
        android:onClick="onDigitSignClicked"
        style="@style/style_calc_button"
        android:text="@string/calc_digit_7"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_central_top_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_left_guideline"
        app:layout_constraintStart_toStartOf="parent"
        />
    <!--    -->
    <!--    -->


    <!--  Bottom fifth row  -->
    <Button
        style="@style/style_calc_button"
        android:onClick="onDividedClicked"
        android:text="@string/calc_operation_separation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_right_guideline"
         />

    <Button
        style="@style/style_calc_button"
        android:onClick="onPercentClicked"
        android:text="@string/calc_operation_percent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
        />

    <Button
        style="@style/style_calc_button"
        android:onClick="onChangeNumberSignClicked"
        android:text="@string/calc_change_neg_pos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_guideline"
        />
    <Button
        style="@style/style_calc_button"
        android:onClick="onCancelClicked"
        android:text="@string/calc_operation_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_left_guideline"
        app:layout_constraintStart_toStartOf="parent"
        />
    <!--    -->
    <!--    -->


</androidx.constraintlayout.widget.ConstraintLayout>